fix: background-attachment scroll (fixed fails with overflow/backdrop-filter); remove overflow:hidden from admin sections

--- a/Comserv/root/static/css/themes/apis.css
+++ b/Comserv/root/static/css/themes/apis.css
@@ -34,8 +34,8 @@
 
 :root {
   --background-image: url(/static/images/BMaster/honey2.jpg);
-  --background-repeat: repeat-x;
-  --background-position: top center;
+  --background-repeat: repeat;
+  --background-position: top left;
   --background-attachment: scroll;
-  --background-size: cover;
+  --background-size: auto;
 }
